--- a/localisation/BCF_l_english.yml
+++ b/localisation/BCF_l_english.yml
@@ -193,8 +193,29 @@
  bcf_tooltip30:0 "§Y玛丽§!影响力:§R-2§!\n§Y押田§!影响力:§R-2§!\n§Y安藤§!影响力:§G+4§!"
  bcf_tooltip31:0 "§Y玛丽§!影响力:§R-1§!\n§Y押田§!影响力:§R-1§!\n§Y安藤§!影响力:§G+2§!"
  bcf_tooltip32:0 "当前派系影响力:§R-5§!\n§Y安藤§!影响力:§G+5§!"
- bcf_tooltip33:0 "当前派系影响力:§G+5§!\n§Y安藤§!影响力:§R-5§!"
+ bcf_tooltip33:0 "当前派系影响力:§G+6§!\n§Y安藤§!影响力:§R-6§!"
  bcf_tooltip34:0 "§Y玛丽§!影响力:§G+8§!\n"
+ bcf_tooltip34_1:0 "当前派系影响力:§R-3§!\n§Y安藤§!影响力:§G+3§!"
+ bcf_tooltip34_2:0 "当前派系影响力:§R-2§!\n§Y安藤§!影响力:§G+2§!"
+ bcf_tooltip34_3:0 "§Y玛丽§!影响力:§R-3§!\n§Y押田§!影响力:§R-3§!\n§Y安藤§!影响力:§G+6§!"
+ bcf_tooltip34_4:0 "§Y玛丽§!影响力:§R-5§!\n§Y押田§!影响力:§R-5§!\n§Y安藤§!影响力:§G+10§!"
+ bcf_tooltip34_5:0 "§Y玛丽§!影响力:§G+5§!\n§Y安藤§!影响力:§R-5§!"
+ bcf_tooltip34_6:0 "§Y玛丽§!影响力:§G+2§!\n§Y押田§!影响力:§R-1§!\n§Y安藤§!影响力:§R-1§!"
+ bcf_tooltip34_7:0 "§Y玛丽§!影响力:§G+4§!\n§Y押田§!影响力:§R-2§!\n§Y安藤§!影响力:§R-2§!"
+ bcf_tooltip34_8:0 "§Y玛丽§!影响力:§G+6§!\n§Y押田§!影响力:§R-3§!\n§Y安藤§!影响力:§R-3§!"
+ bcf_tooltip34_9:0 "§Y玛丽§!影响力:§R-20§!\n§Y押田§!影响力:§G+10§!\n§Y安藤§!影响力:§G+10§!"
+ bcf_tooltip34_10:0 "当前派系影响力:§R-1§!\n§Y玛丽§!影响力:§G+1§!"
+ bcf_tooltip34_11:0 "当前派系影响力:§R-4§!\n§Y玛丽§!影响力:§G+4§!"
+ bcf_tooltip34_12:0 "当前派系影响力:§G+5§!\n§Y玛丽§!影响力:§R-5§!"
+ bcf_tooltip34_13:0 "§Y玛丽§!影响力:§G+8§!\n§Y押田§!影响力:§R-4§!\n§Y安藤§!影响力:§R-4§!"
+ bcf_tooltip34_14:0 "§Y玛丽§!影响力:§G+16§!\n§Y押田§!影响力:§R-8§!\n§Y安藤§!影响力:§R-8§!"
+ bcf_tooltip34_15:0 "§Y押田§!影响力:§R-2§!\n§Y安藤§!影响力:§G+2§!"
+ bcf_tooltip34_16:0 "§Y玛丽§!影响力:§G+2§!\n§Y押田§!影响力:§R-4§!\n§Y安藤§!影响力:§G+2§!"
+ bcf_tooltip34_17:0 "当前派系影响力:§R-6§!\n§Y押田§!影响力:§G+6§!"
+ bcf_tooltip34_18:0 "§Y玛丽§!影响力:§G+4§!\n§Y押田§!影响力:§R-8§!\n§Y安藤§!影响力:§G+4§!"
+ bcf_tooltip34_19:0 "当前派系影响力:§R-5§!\n§Y押田§!影响力:§G+5§!"
+ bcf_tooltip34_20:0 "§Y玛丽§!影响力:§G+5§!\n§Y押田§!影响力:§R-5§!"
+
  bcf_check_if_allie_puppet_control_core_state:0 "我们，我们的盟友，或我们的附庸控制了巴黎，罗马，伦敦和柏林"
  bcf_check_if_allie_puppet_control_core_state_facism:0 "我们，我们的盟友，或我们的附庸控制了巴黎，柏林和华沙"
  bcf_check_if_allie_puppet_control_land_required_for_third_empire:0 "我们，我们的盟友，或我们的附庸控制了巴黎，柏林，华沙，伦敦，罗马和莫斯科"
@@ -618,6 +639,15 @@
  BCF_fight_for_france_idea_1:0 "为法兰西而战"
  BCF_fight_for_france_idea_2:0 "为法兰西而战"
  BCF_fight_for_france_idea_3:0 "为法兰西而战"
+ BCF_marie:"Marie"
+ BCF_andou:"Andou"
+ BCF_oshida:"Oshida"
+ BCF_azumi:"Azumi"
+ BCF_Sofue:"Sofue"
+ BCF_Isabe:"Isabe"
+ BCF_Asparagus:"Asparagus"
+ BCF_Bordeaux:"Bordeaux"
+ BCF_Moule:"Moule"
 
 #decisions
  bcf_missions:0 "BC自由-任务"
@@ -711,3 +741,52 @@
  add_construct_of_de_gaulle_cv:0 "将1艘戴高乐级航空母舰添加到生产线，进度为75%"
  de_gaulle_carrier_1:0 "戴高乐"
  add_construct_of_cl_freedom:0 "将4艘自由级轻巡洋舰添加到生产线，进度为50%"
+
+#trait
+ BCF_marie_faction:"玛丽派"
+ BCF_marie_faction_desc:""
+ BCF_andou_faction:"安藤派"
+ BCF_andou_faction_desc:""
+ BCF_oshida_faction:"押田派"
+ BCF_oshida_faction_desc:""
+ BCF_princess_of_lle_de_france:"法兰西岛的公主"
+ BCF_princess_of_lle_de_france_desc:""
+ BCF_defender_of_france:"法兰西的捍卫者"
+ BCF_defender_of_france_desc:"""
+ BCF_joint_operations:"联合作战"
+ BCF_joint_operations_desc:""
+ BCF_military_theorist:"军事理论家"
+ BCF_military_theorist_desc:""
+ BCF_mobile_theorist:"机动作战学说专家"
+ BCF_mobile_theorist_desc:""
+ BCF_battleplan_theorist:"决战计划学说专家"
+ BCF_battleplan_theorist_desc:""
+ BCF_radical:"激进派"
+ BCF_radical_desc:""
+ BCF_war_fanatic:"战争狂人"
+ BCF_war_fanatic_desc:""
+ BCF_speed_first:"速度至上"
+ BCF_speed_first_desc:""
+ BCF_defence_first:"专注防御"
+ BCF_defence_first_desc:""
+ BCF_diplomat:"外交专家"
+ BCF_diplomat_desc:""
+ BCF_conservative:"保守派"
+ BCF_conservative_desc:""
+ BCF_LT_commander:"轻型坦克指挥官"
+ BCF_LT_commander_desc:""
+ BCF_marie_assistant:"玛丽的助手"
+ BCF_marie_assistant_desc:""
+ BCF_artillery_commander:"炮兵指挥官"
+ BCF_artillery_commander_desc:""
+ BCF_great_unite:"伟大的团结者"
+ BCF_great_unite_desc:""
+ BCF_armor_commander:"装甲指挥官"
+ BCF_armor_commander_desc:""
+ BCF_BC_party:"BC派"
+ BCF_BC_party_desc:""
+ BCF_freedom_party:"自由派"
+ BCF_freedom_party_desc:""
+
+  rebuild_senshado.7.t:"[FROM.GetAdjective]同意加入联盟"
+  rebuild_senshado.8.t:"[FROM.GetAdjective]拒绝加入联盟"
